[package]
name = "dns-sd"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kube = { version = "0.94.0", features = ["runtime", "client", "derive"] }
mdns-sd = "0.11.3"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
# kube wants the "macros" feature but it seems to be broken currently
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"
